<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">村田</string>
    <string name="owner">管理员</string>
    <string name="not_owner">您不是管理员</string>
    <string name="member">普通成员</string>
    <string name="on">开</string>
    <string name="off">关</string>
    <string name="open">开启成功</string>
    <string name="close">关闭成功</string>
    <string name="retry">请重试</string>
    <string name="device">设备</string>
    <string name="next">下一步</string>
    <string name="sure">确定</string>
    <string name="reset">重置</string>
    <string name="internet_error">网络错误</string>
    <string name="finish">完成</string>
    <string name="unbind">解除绑定</string>
    <string name="unbind_confirm">是否解绑该设备</string>
    <string name="unbind_success">解绑成功</string>
    <string name="no">否</string>
    <string name="yes">是</string>
    <string name="no_login">您还没有登录,请登录</string>
    <string name="timeout">超时</string>
    <string name="refresh">刷新</string>

    <!-- MainActivity-->
    <string name="main_title">开发板</string>
    <string name="buffer">蜂鸣器</string>
    <string name="light1">LED灯1</string>
    <string name="light2">LED灯2</string>
    <string name="led">三色灯</string>
    <string name="moto">马达</string>
    <string name="open_error">设备开启失败，请更换设备</string>
    <string name="close_error">设备关闭失败，请更换设备</string>
    <string name="set_nick_name">设置昵称</string>

    <!-- AddDeviceActivity-->
    <string name="add_device_title">设置Wi-Fi</string>
    <string name="add_device_ssid_hint">连接Wi-Fi</string>
    <string name="add_device_pwd_hint">输入Wi-Fi密码</string>
    <string name="add_device_active">正在激活设备，请稍后。。。</string>
    <string name="add_device_active_success">设备激活成功</string>
    <string name="add_device_active_retry">重新激活设备</string>
    <string name="add_device_bind">正在绑定设备</string>
    <string name="add_device_bind_success">绑定成功</string>
    <string name="add_device_add_success">成功添加设备</string>

    <!-- DeviceReadyActivity-->
    <string name="device_ready_title">添加新设备</string>
    <string name="device_ready_hint">按下开发板上的SW6之后在5s之内按下SW7，然后点击下一步</string>

    <!-- ResetWifiActivity-->
    <string name="reset_wifi_title">重设WiFi</string>
    <string name="reset_wifi_active">正在重置，请稍后。。。</string>
    <string name="reset_wifi_active_hint">重置设备wifi</string>
    <string name="reset_wifi_success">重置设备wifi成功</string>

    <!-- LightActivity-->
    <string name="light_title">三色灯</string>
    <string name="light_bright">亮度</string>

    <!-- MotoActivity-->
    <string name="moto_title">马达</string>
    <string name="moto_speed">转速</string>

    <!-- LoginActivity-->
    <string name="login_title">登录</string>
    <string name="login_phone">您的手机号或邮箱</string>
    <string name="login_pwd">6-30位登录密码</string>
    <string name="login_register">新用户注册</string>
    <string name="login_reset">忘记密码</string>
    <string name="login_success">登录成功</string>
    <string name="login_phone_empty">手机号或邮箱不能为空</string>
    <string name="login_phone_hint">您输入的手机号或邮箱不存在</string>
    <string name="login_pwd_empty">密码不能为空</string>

    <!-- PasswordActivity-->
    <string name="password_title">设置密码</string>
    <string name="password_name">设置用户名</string>
    <string name="password_name_hint">用户名不能为空</string>
    <string name="password_pwd">设置6-30位用户密码</string>
    <string name="password_pwd_hint">请输入正确的密码</string>
    <string name="password_repwd">再次输入</string>
    <string name="password_repwd_hint">重复密码不匹配</string>
    <string name="password_register_success">注册成功</string>
    <string name="password_reset_success">重设密码成功</string>

    <!-- ChangePwdActivity-->
    <string name="change_pwd_title">修改密码</string>
    <string name="change_pwd_old">原密码</string>
    <string name="change_pwd_old_hint">原密码不能为空</string>
    <string name="change_pwd_old_hint2">原密码不正确</string>
    <string name="change_pwd_new">新密码</string>
    <string name="change_pwd_new_hint">新密码不能为空</string>
    <string name="change_pwd_sure">确认密码</string>
    <string name="change_pwd_sure_hint">重复密码不匹配</string>
    <string name="change_pwd_success">修改密码成功</string>

    <!-- PhoneActivity-->
    <string name="phone_title">设置密码</string>
    <string name="phone_text">请输入您的注册手机号或邮箱</string>
    <string name="phone_exist">该手机号或邮箱已被注册</string>
    <string name="phone_no_exist">该手机号码或邮箱不存在</string>
    <string name="phone_text_error_hint">该手机号码或邮箱不合法</string>
    <string name="phone_text_hint">我们将通过短信或邮箱向您发送验证码</string>

    <!-- VCodeActivity-->
    <string name="vcode_title">发送验证码</string>
    <string name="vcode_text">请查收短信或邮箱，并输入6位数字验证码</string>
    <string name="vcode_error">您输入的验证码有误</string>
    <string name="vcode_sms_resend">重新发送验证码</string>
    <string name="vcode_resend">重发验证码</string>

    <!-- AboutActivity-->
    <string name="about_title">关于我们</string>
    <string name="about_copyright">智云奇点公司版权所有</string>
    <string name="about_detail">提供云智能引擎，快速实现大规模设备智能化\n提供大数据分析引擎，轻松实现智能硬件商业智能\n提供物联网安全引擎，快速打造顶级安全的联网硬件\n\n\n</string>
    <string name="about_general">开启硬件云端智慧</string>

    <!-- AuthorizedMemberActivity-->
    <string name="authorized_member_title">成员</string>
    <string name="authorized_member_add">请输入成员手机号</string>
    <string name="authorized_member_authorized_text">被授权成员</string>
    <string name="authorized_member_unbind_hint">解除绑定后，其他已分享的成员将会同时失去该设备的控制权</string>

    <!-- DeviceManagerActivity-->
    <string name="device_manager_title">设备管理</string>

    <!-- MyDeviceActivity-->
    <string name="my_device_title">我的设备</string>
    <string name="my_device_share_member">已分享成员</string>
    <string name="my_device_share">分享设备</string>
    <string name="my_device_choose">选择</string>

    <!-- PersonalActivity-->
    <string name="personal_title">个人信息</string>
    <string name="personal_change_nickname">修改昵称</string>
    <string name="personal_set_nickname">请输入您的昵称</string>
    <string name="personal_set_nickname_hint">昵称不能为空</string>
    <string name="personal_change_nickname_success">修改昵称成功</string>
    <string name="personal_change_pwd">修改密码</string>
    <string name="personal_logout">注销退出</string>

    <!-- ShareActivity-->
    <string name="share_title">分享设备</string>
    <string name="share_hint">使用app扫描该二维码可以获得设备的控制权\n该二维码5分钟内有效</string>

    <!-- SlideMenu-->
    <string name="menu_device_manager">设备管理</string>
    <string name="menu_update">检查更新</string>
    <string name="menu_update_already">已经是最新版本</string>
    <string name="menu_update_no_net">没有wifi连接， 只在wifi下更新</string>
    <string name="menu_about_us">关于我们</string>

    <!-- Pop-->
    <string name="bind_device_first">请先绑定设备</string>
    <string name="share_with_owner_only">只有管理员才可以分享设备</string>
    <string name="add_device">添加新设备</string>
    <string name="add_device_with_sharecode">添加别人分享的设备</string>
    <string name="share_device">分享设备</string>
    <string name="reset_wifi">重设WiFi</string>
    <string name="delete_device">删除设备</string>
    <string name="logout">退出登录</string>

    <!-- 二维码扫描 BEGIN -->
    <string name="barcode_laser_tip">将二维码放入框中，即可自动添加</string>
    <string name="msg_camera_framework_bug">Sorry, the Android camera encountered a problem. You may need to restart the device.</string>
</resources>
