<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
    <LinearLayout android:id="@+id/popup_add"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:orientation="vertical">
        <TextView android:id="@+id/popup_bind"
                  android:layout_width="match_parent"
                  android:layout_height="@dimen/popup_text_height"
                  android:gravity="center"
                  android:textColor="@color/phone_text"
                  android:background="@drawable/selectors_bg_white"
                  android:textSize="14sp"
                  android:text="@string/add_device"/>
        <TextView style="@style/login_line_style"/>
        <TextView android:id="@+id/popup_bind_share"
                  android:layout_width="match_parent"
                  android:layout_height="@dimen/popup_text_height"
                  android:gravity="center"
                  android:textColor="@color/phone_text"
                  android:background="@drawable/selectors_bg_white"
                  android:textSize="14sp"
                  android:text="@string/add_device_with_sharecode"/>
        <TextView style="@style/login_line_style"/>
    </LinearLayout>
    <LinearLayout android:id="@+id/popup_more"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:orientation="vertical">
        <TextView android:id="@+id/popup_share"
                  android:layout_width="match_parent"
                  android:layout_height="@dimen/popup_text_height"
                  android:gravity="center"
                  android:textColor="@color/phone_text"
                  android:background="@drawable/selectors_bg_white"
                  android:textSize="14sp"
                  android:text="@string/share_device"/>
        <TextView style="@style/login_line_style"/>
        <TextView android:id="@+id/popup_reset_wifi"
                  android:layout_width="match_parent"
                  android:layout_height="@dimen/popup_text_height"
                  android:gravity="center"
                  android:textColor="@color/phone_text"
                  android:background="@drawable/selectors_bg_white"
                  android:textSize="14sp"
                  android:text="@string/reset_wifi"/>
        <TextView style="@style/login_line_style"/>
        <TextView android:id="@+id/popup_delete"
                  android:layout_width="match_parent"
                  android:layout_height="@dimen/popup_text_height"
                  android:gravity="center"
                  android:textColor="@color/phone_text"
                  android:background="@drawable/selectors_bg_white"
                  android:textSize="14sp"
                  android:text="@string/delete_device"/>
        <TextView style="@style/login_line_style"/>
        <TextView android:id="@+id/popup_logout"
                  android:layout_width="match_parent"
                  android:layout_height="@dimen/popup_text_height"
                  android:gravity="center"
                  android:textColor="@color/phone_text"
                  android:background="@drawable/selectors_bg_white"
                  android:textSize="14sp"
                  android:text="@string/logout"/>
    </LinearLayout>
</LinearLayout>